# ChangeLog for dev-libs/xapian-bindings
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/ChangeLog,v 1.28 2012/02/05 10:00:53 ago Exp $

  05 Feb 2012; Agostino Sarubbo <ago@gentoo.org> xapian-bindings-1.2.8.ebuild:
  Stable for amd64, wrt bug #402187

  17 Dec 2011; Anthony G. Basile <blueness@gentoo.org>
  xapian-bindings-1.2.8.ebuild, +files/fix-LUA_LIB-envvar.patch:
  Fix install location of lua binding

*xapian-bindings-1.2.8 (14 Dec 2011)

  14 Dec 2011; Anthony G. Basile <blueness@gentoo.org>
  +xapian-bindings-1.2.8.ebuild:
  Version bump, bug #394413

*xapian-bindings-1.2.7-r2 (18 Sep 2011)

  18 Sep 2011; Anthony G. Basile <blueness@gentoo.org>
  -xapian-bindings-1.2.7-r1.ebuild, +xapian-bindings-1.2.7-r2.ebuild,
  metadata.xml:
  Fix java bindings, bug #176419

*xapian-bindings-1.2.7-r1 (16 Sep 2011)

  16 Sep 2011; Anthony G. Basile <blueness@gentoo.org>
  -xapian-bindings-1.2.7.ebuild, +xapian-bindings-1.2.7-r1.ebuild:
  Remove swig dep and conditional dep on php, add PHP_EXT_OPTIONAL_USE="php",
  bug #383047

  16 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
  Removing python herd from maintainers.

  15 Sep 2011; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
  Added myself and Johan Bergström as maintainers

*xapian-bindings-1.2.7 (15 Sep 2011)

  15 Sep 2011; Anthony G. Basile <blueness@gentoo.org>
  +xapian-bindings-1.2.7.ebuild:
  Version bump, bug #383047

  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org>
  -xapian-bindings-1.2.4.ebuild:
  Remove old ebuilds. Requested by Arfrever

*xapian-bindings-1.2.5 (09 May 2011)

  09 May 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +xapian-bindings-1.2.5.ebuild:
  Version bump.

*xapian-bindings-1.2.4 (23 Dec 2010)

  23 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -xapian-bindings-1.0.20.ebuild, -xapian-bindings-1.2.2.ebuild,