@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/xapian-bindings
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/ChangeLog,v 1.28 2012/02/05 10:00:53 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/ChangeLog,v 1.29 2012/02/25 02:06:47 patrick Exp $
+
+  25 Feb 2012; Patrick Lauer <patrick@gentoo.org> xapian-bindings-1.2.5.ebuild,
+  xapian-bindings-1.2.7-r2.ebuild, xapian-bindings-1.2.8.ebuild:
+  Restricting pypy
 
   05 Feb 2012; Agostino Sarubbo <ago@gentoo.org> xapian-bindings-1.2.8.ebuild:
   Stable for amd64, wrt bug #402187
